syntax = "proto3";

option go_package = "github.com/anatolio-deb/picovpnd/picovpnd";
package helloworld;

service OpenConnectService {
  rpc UserAdd (UserAddRequest) returns (Response) {}
  rpc UserLock (UserLockRequest) returns (Response) {}
  rpc UserUnlock (UserUnlockRequest) returns (Response) {}
  rpc UserDelete (UserDeleteRequest) returns (Response) {}
  rpc UserChangePassword (UserChangePasswordRequest) returns (Response) {}
  rpc GetCert (AuthenticateRequest) returns (CertResponse) {}
}

message CertResponse {
  string cert = 1;
}

message UserAddRequest {
  string username = 1;
  string password = 2;
  string token = 3; // Token for authentication
}

message Response {
  string error = 1;
}

message UserLockRequest {
  string username = 1;
  string token = 3; // Token for authentication

}

message UserUnlockRequest {
  string username = 1;
  string token = 3; // Token for authentication

}

message UserDeleteRequest {
  string username = 1;
  string token = 3; // Token for authentication

}

message UserChangePasswordRequest {
  string username = 1;
  string password = 2;
  string token = 3; // Token for authentication
}

message AuthenticateRequest {
  string token = 1; // Token for authentication
}
